@@ -6,6 +6,7 @@ Release 0.6.0: Unreleased
 INCOMPATIBLE CHANGES
 
 ALL CHANGES:
+  TEZ-1642. TestAMRecovery sometimes fail.
   TEZ-1859. TestGroupedSplits has commented out test: testGzip.
   TEZ-1868. Document how to do Windows builds due to with ACL symlink build changes.
   TEZ-1872. docs/src/site/custom/project-info-report.properties needs license header.
